--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="es>
-    <head>
-      <meta charset=" UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Exposite</title>
+<html lang="es">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Exposite</title>
 </head>
 
 <body>
